# NOSWIPER

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  USAGE.md  test_pattern  test_pattern.rs
.claude/: EUID_RANGES.md  LINUX_IMPLEMENTATION.md  LINUX_USAGE.md  MACOS_PROCESS_SUSPENSION.md  MISSING_SECRETS.md  PLATFORM_BINARY_BENEFITS.md  SECURITY_HARDENING.md  client_api.md
agent/: Cargo.toml  test_config.sh  test_debug.sh  test_gcloud.sh  test_ipc_security.sh  test_shell_history.sh
agent/config/: freebsd.yaml  illumos.yaml  linux.yaml  macos.yaml  netbsd.yaml  openbsd.yaml  unix.yaml
agent/src/: allow_rule.rs  cli.rs  config.rs  defaults.rs  dtrace_monitor.rs  error.rs  freebsd_monitor.rs  ipc_server.rs  json_logger.rs  lib.rs  linux_monitor.rs  main.rs  monitor.rs  monitor.rs.bak  rules.rs  types.rs
config/: default.yaml  default_old.yaml  freebsd.yaml  illumos.yaml  linux.yaml  macos.yaml  netbsd.yaml  openbsd.yaml  solaris.yaml  unix.yaml
src/: allow_rule.rs  cli.rs  config.rs  defaults.rs  dtrace_monitor.rs  freebsd_monitor.rs  index.html  linux_monitor.rs  main.rs  monitor.rs  process_context.rs  rules.rs
ui/: Cargo.toml
ui-tauri/: Cargo.toml  create_icons.py  tauri.conf.json
ui-tauri/icons/: icon.icns
ui-tauri/ui/src/: ipc_client.rs
ui/macos/NoSwiper/: IPCClient.swift  Info.plist  MenuBarController.swift  NoSwiperApp.swift  ViolationAlert.swift  ViolationHistoryWindow.swift
ui/macos/NoSwiper.xcodeproj/: project.pbxproj
ui/rust/capabilities/: default.json
ui/rust/src/: index.html  index.html.bak  main.rs  overrides.html
ui/rust/ui/src/: main.rs  process_info.rs  violation_dialog.rs
ui/src/: ipc_client.rs  main.rs  process_info.rs  violation_window.rs
ui/swift/: README.md  build.sh
ui/swift/NoSwiper/: ContentView.swift  IPCClient.swift  MenuBarController.swift  OverrideRulesWindow.swift
