[package]
name = "noswiper"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Simple Rust-based credential protection daemon"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/noswiper"
keywords = ["security", "credentials", "protection", "daemon"]

[[bin]]
name = "noswiper-daemon"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
glob = "0.3"
shellexpand = "3.1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
# No additional dependencies needed for eslogger approach

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nix = "0.27"

[dev-dependencies]
tempfile = "3.0"