[package]
name = "noswiper"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Simple Rust-based credential protection agent"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/noswiper"
keywords = ["security", "credentials", "protection", "daemon"]

[[bin]]
name = "noswiper-agent"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.10"
glob = "0.3"
shellexpand = "3.1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
lazy_static = "1.4"

[target.'cfg(target_os = "macos")'.dependencies]
# No additional dependencies needed for eslogger approach

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["fs", "process", "signal", "user"] }

[target.'cfg(target_os = "freebsd")'.dependencies]
nix = { version = "0.27", features = ["fs", "process", "signal", "user"] }

[target.'cfg(target_os = "netbsd")'.dependencies]
nix = { version = "0.27", features = ["fs", "process", "signal", "user"] }

[target.'cfg(target_os = "openbsd")'.dependencies]
nix = { version = "0.27", features = ["fs", "process", "signal", "user"] }

[target.'cfg(any(target_os = "illumos", target_os = "solaris"))'.dependencies]
nix = { version = "0.27", features = ["fs", "process", "signal", "user"] }

[dev-dependencies]
tempfile = "3.0"